# Case_Engine

./: CMakeLists.txt  LICENSE  Makefile.txt  Readme.md  SConstruct
Sources/Editor/: CMakeLists.txt  Editor.cpp  Editor.hpp
Sources/Editor/CheckSystem/: CheckSystem.cpp  CheckSystem.hpp
Sources/Editor/Managers/: PRManager.cpp  PRManager.hpp
Sources/Editor/Managers/AssetsManager/: AssetsManager.cpp  AssetsManager.hpp
Sources/Editor/Managers/LogsManager/: LogsManager.cpp  LogsManager.hpp
Sources/Editor/Managers/SettingsManager/: SettingsManager.cpp  SettingsManager.hpp
Sources/Editor/SandBox/: SandBox.cpp  SandBox.hpp
Sources/Editor/SandBox/UI/: az.cpp  az_impl_dx11.cpp  az_impl_glut.cpp  az_impl_opengl2.cpp  az_impl_opengl3.cpp  az_impl_vulkan.cpp  az_impl_win32.cpp  azdraw.cpp  aztables.cpp  azwidgets.cpp
Sources/Editor/SandBox/UI/Az/: Az.cpp  AzCurveEdit.cpp  AzDraw.cpp  AzGradient.cpp  AzGraphEditor.cpp  AzGuizmo.cpp  AzSequencer.cpp  AzTables.cpp  AzWidgets.cpp  az_impl_dx11.cpp  az_impl_dx11.hpp  az_impl_opengl3.cpp  az_impl_opengl3.hpp  az_impl_opengl3_loader.hpp  az_impl_osx.hpp  az_impl_osx.mm  az_impl_vulkan.cpp  az_impl_vulkan.hpp  az_impl_win32.cpp  az_impl_win32.hpp
Sources/Kernel/Aid/: CMakeLists.txt
Sources/Kernel/Aid/Algorithms/: Algorithms.cpp  Algorithms.hpp  HowToUse.md
Sources/Kernel/Aid/FPLParser/: FPLParser.cpp  FPLParser.hpp  HowToUse.md
Sources/Kernel/Aid/INIParser/: HowToUse.md  INIParser.cpp  INIParser.hpp
Sources/Kernel/Aid/JSONParser/: HowToUse.md  JSONParser.cpp  JSONParser.hpp
Sources/Kernel/Aid/Lua/: Lua.hpp  LuaContext.cpp  LuaContext.hpp  LuaCpp.hpp  LuaMetaObject.cpp  LuaMetaObject.hpp  LuaVersion.cpp  LuaVersion.hpp
Sources/Kernel/Aid/Lua/Registry/: LuaCFunction.cpp  LuaCFunction.hpp  LuaCodeSnippet.cpp  LuaCodeSnippet.hpp  LuaCompiler.cpp  LuaCompiler.hpp  LuaLibrary.cpp  LuaLibrary.hpp  LuaRegistry.cpp  LuaRegistry.hpp
Sources/Kernel/Aid/Lua/Types/: LuaState.cpp  LuaState.hpp  LuaTBoolean.cpp  LuaTBoolean.hpp  LuaTNil.cpp  LuaTNil.hpp  LuaTNumber.cpp  LuaTNumber.hpp  LuaTString.cpp  LuaTString.hpp  LuaTTable.cpp  LuaTTable.hpp  LuaTUserData.cpp  LuaTUserData.hpp  LuaType.cpp  LuaType.hpp
Sources/Kernel/Aid/MakeFusion/: MakeFusion.cpp  MakeFusion.hpp
Sources/Kernel/Aid/Math/: HowToUse.md
Sources/Kernel/Aid/Math/Matrix/: Matrix2.cpp  Matrix2.hpp  Matrix3.cpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp
Sources/Kernel/Aid/Math/Quaternion/: Quaternion.cpp  Quaternion.hpp
Sources/Kernel/Aid/Math/Vector/: Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
Sources/Kernel/Aid/PNodes/: PNodes.cpp  PNodes.hpp
Sources/Kernel/Aid/Plugins/: Plugins.cpp  Plugins.hpp
Sources/Kernel/Aid/Python/: PythonBuilders.cpp  PythonBuilders.hpp  PythonClass.cpp  PythonClass.hpp  PythonCpp.hpp  PythonCppCommon.hpp  PythonDefs.hpp  PythonDict.cpp  PythonDict.hpp  PythonException.cpp  PythonException.hpp  PythonFunction.cpp  PythonFunction.hpp  PythonInspect.cpp  PythonInspect.hpp  PythonInstance.cpp  PythonInstance.hpp  PythonList.cpp  PythonList.hpp  PythonMain.cpp  PythonMain.hpp  PythonModule.cpp  PythonModule.hpp  PythonObject.cpp  PythonObject.hpp  PythonTuple.cpp  PythonTuple.hpp  PythonType.cpp  PythonType.hpp
Sources/Kernel/Aid/Random/: HowToUse.md  Random.cpp  Random.hpp
Sources/Kernel/Aid/Res/: Res.cpp  Res.hpp
Sources/Kernel/Aid/ShaderPack/: CMakeLists.txt  Gen.hpp  HLSL.g4  HLSL.interp  HLSL.tokens  HLSLBaseListener.cpp  HLSLBaseListener.h  HLSLBaseVisitor.cpp  HLSLBaseVisitor.h  HLSLLexer.cpp  HLSLLexer.h  HLSLLexer.interp  HLSLListener.cpp  HLSLListener.h  HLSLParser.cpp  HLSLParser.h  HLSLVisitor.cpp  HLSLVisitor.h  ShaderPack.cpp  ShaderPack.hpp  input.hlsl  test.cpp
Sources/Kernel/Aid/ShaderPack/HLSLToGLSL/: CiString.hpp  CodeWriter.cpp  CodeWriter.hpp  Compiler.cpp  Compiler.hpp  ConsoleManip.cpp  ConsoleManip.hpp  Dictionary.hpp  Exception.cpp  Exception.hpp  Export.hpp  Flags.hpp  HTG.cpp  HTG.hpp  Helper.hpp  IncludeHandler.cpp  IncludeHandler.hpp  IndentHandler.cpp  IndentHandler.hpp  JoinString.cpp  JoinString.hpp  Log.cpp  Log.hpp  PlatformConsoleManip.cpp  Reflection.cpp  Reflection.hpp  ReflectionPrinter.cpp  ReflectionPrinter.hpp  Report.hpp  ShaderVersion.cpp  ShaderVersion.hpp  SourceCode.cpp  SourceCode.hpp  SymbolTable.cpp  (+6 more)
Sources/Kernel/Aid/System/: HowToUse.md
Sources/Kernel/Aid/Timer/: HowToUse.md  Timer.cpp  Timer.hpp
Sources/Kernel/Aid/TypeToType/: TypeToType.cpp  TypeToType.hpp
Sources/Kernel/Audio/: Audio.hpp  CMakeLists.txt  Readme.md
Sources/Kernel/Audio/AudioSystem/: AudioSystem.cpp  AudioSystem.hpp  HowToUse.md
Sources/Kernel/Audio/Channel/: Channel.cpp  Channel.hpp  HowToUse.md
Sources/Kernel/Audio/ChannelGroup/: ChannelGroup.cpp  ChannelGroup.hpp  HowToUse.md
Sources/Kernel/Audio/DSP/: DSPEffect.cpp  DSPEffect.hpp  HowToUse.md
Sources/Kernel/Audio/Geometry/: Geometry.cpp  Geometry.hpp  HowToUse.md
Sources/Kernel/Audio/Sound/: HowToUse.md  Sound.cpp  Sound.hpp
Sources/Kernel/Aux/: CMakeLists.txt
Sources/Kernel/Aux/Algorithms/: Algorithms.cpp  Algorithms.hpp  HowToUse.md
Sources/Kernel/Aux/FPLParser/: FPLParser.cpp  FPLParser.hpp  HowToUse.md
Sources/Kernel/Aux/INIParser/: HowToUse.md  INIParser.cpp  INIParser.hpp
Sources/Kernel/Aux/JSONParser/: HowToUse.md  JSONParser.cpp  JSONParser.hpp
Sources/Kernel/Aux/Math/: HowToUse.md
Sources/Kernel/Aux/Random/: HowToUse.md  Random.cpp  Random.hpp
Sources/Kernel/Aux/System/: HowToUse.md
Sources/Kernel/Aux/Timer/: HowToUse.md  Timer.cpp  Timer.hpp
Sources/Kernel/Graphics/: CMakeLists.txt
Sources/Kernel/Graphics/RHI/: RHI.hpp
Sources/Kernel/Graphics/Window/: Window.cpp  Window.hpp
Tests/: CMakeLists.txt  Tests.cpp
Tests/Aid/: Algorithms.test.hpp  DateTime.test.hpp  FPLParser.test.hpp  Filesystem.test.hpp  INIParser.test.hpp  InfoSys.test.hpp  JSONParser.test.hpp  Matrix2.test.hpp  Matrix3.test.hpp  Matrix4.test.hpp  Quaternion.test.hpp  Quternion.test.hpp  Random.test.hpp  Timer.test.hpp  Vector2.test.hpp  Vector3.test.hpp  Vector4.test.hpp
Tests/Audio/: AudioSystem.test.hpp
(+139 files in other folders)
